프로젝트 일괄 업데이트